--- a/public/css/id_styles.css
+++ b/public/css/id_styles.css
@@ -25,8 +25,8 @@
 }
 
 #cerradura{
-    margin-top: 5px;
     height: 40px;
+    margin-top: 10px;
 }
 
 .form{
@@ -35,6 +35,10 @@
     align-items: center;
     flex-direction: column;
     margin: auto;
+    background: white;
+    padding: 40px 30px;
+    border: 1px solid black;
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.726);
 }
 
 form h2{
@@ -49,6 +53,10 @@ form h2{
 div label{
     margin-right: 10px;
     font-family: 'Times New Roman', Times, serif;
+}
+
+div div input{
+    border-bottom: 1px solid black;
 }
 
 #button{
