--- a/public/css/id_styles.css
+++ b/public/css/id_styles.css
@@ -34,6 +34,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 85px;
     margin: auto;
     background: white;
     padding: 40px 30px;
